[project]
name = "privacy-filter-redactor-lib"
version = "0.1.0"
description = "A local-first PII detection and redaction library using OpenAI's privacy-filter model."
authors = [
    { name = "Aaron", email = "aaron@example.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.28.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.48.3",
]
license = { text = "MIT" }

[tool.hatch.build.targets.wheel]
packages = ["src/privacy_filter_redactor"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
