[project]
name = "privacy-filter-redactor-lib"
version = "0.1.1"
description = "A local-first PII detection and redaction library using OpenAI's privacy-filter model."
authors = [
    { name = "Aaron A.", email = "aaronacodev@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.28.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.48.3",
]
license = { text = "MIT" }

[tool.hatch.build.targets.wheel]
packages = ["src/privacy_filter_redactor"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["demo"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "gradio>=6.13.0",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
]
